--- a/imageExperiments/sitePageStyle.css
+++ b/imageExperiments/sitePageStyle.css
@@ -5,7 +5,6 @@
     position: fixed;
     width: 100%;
     top: 0;
-    
 }
 
 .navbarBottom {
@@ -70,7 +69,7 @@ h1 {
     position: fixed;
     top: 100;
     left: 0;
-    z-index: -5;
+    z-index: -1; /* 0 or more makes the thumbnails/buttons/text scroll behind it */ 
 }
 
 /* .featureContainer img {
@@ -81,17 +80,15 @@ h1 {
 
 .featureImage {
     max-width: 500px;
-    max-height: 250px;
+    max-height: 300px; /* changed - good on mobile, bad on browser size */
     margin-top: 8px;
-    
-
 }
 
 .thumbnailContainer {
-    margin-top: 700px;
+    margin-top: 420px; /* changed */
     min-height: calc(10vh - 5px);
 }
 
 .thumbnailImage {
-    
+    /* max-height: 65px; */ /* good on mobile, bad on browser size */
 }
